k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend-deployment
    namespace: exsys-production
spec:
    replicas: 2
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxUnavailable: 1
            maxSurge: 1
    selector:
        matchLabels:
            app: backend-deployment
    template:
        metadata:
            labels:
                app: backend-deployment
        spec:
            automountServiceAccountToken: false
            containers:
                -   name: backend-deployment
                    resources:
                        limits:
                            cpu: "400m"
                            memory: "300M"
                        requests:
                            cpu: "250m"
                            memory: "200M"
                    image: "rhaversen/exsys-backend:531f2eab02572da43dae0b60dfa4627cee98f995"
                    imagePullPolicy: Always
                    livenessProbe:
                        httpGet:
                            path: service/livez
                            port: 5000
                        periodSeconds: 10
                        initialDelaySeconds: 15
                        failureThreshold: 5
                    readinessProbe:
                        httpGet:
                            path: service/readyz
                            port: 5000
                        periodSeconds: 10
                        initialDelaySeconds: 15
                        failureThreshold: 5
                    ports:
                        -   containerPort: 5000
